1、增加短信渠道默认规则。 2、调整短信验证码生成函数。
